--- a/style/_base.scss
+++ b/style/_base.scss
@@ -21,11 +21,11 @@ svg {
 
 /* Webfont: Lato-Regular */@font-face {
     font-family: 'LatoWebRegular';
-    src: url('/cbmjs/font/lato/Lato-Regular.eot'); /* IE9 Compat Modes */
-    src: url('/cbmjs/font/lato/Lato-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/cbmjs/font/lato/Lato-Regular.woff2') format('woff2'), /* Modern Browsers */
-         url('/cbmjs/font/lato/Lato-Regular.woff') format('woff'), /* Modern Browsers */
-         url('/cbmjs/font/lato/Lato-Regular.ttf') format('truetype');
+    src: url('./font/lato/Lato-Regular.eot'); /* IE9 Compat Modes */
+    src: url('./font/lato/Lato-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./font/lato/Lato-Regular.woff2') format('woff2'), /* Modern Browsers */
+         url('./font/lato/Lato-Regular.woff') format('woff'), /* Modern Browsers */
+         url('./font/lato/Lato-Regular.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -33,11 +33,11 @@ svg {
 
 /* Webfont: Lato-Light */@font-face {
     font-family: 'LatoWebLight';
-    src: url('/cbmjs/font/lato/Lato-Light.eot'); /* IE9 Compat Modes */
-    src: url('/cbmjs/font/lato/Lato-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/cbmjs/font/lato/Lato-Light.woff2') format('woff2'), /* Modern Browsers */
-         url('/cbmjs/font/lato/Lato-Light.woff') format('woff'), /* Modern Browsers */
-         url('/cbmjs/font/lato/Lato-Light.ttf') format('truetype');
+    src: url('./font/lato/Lato-Light.eot'); /* IE9 Compat Modes */
+    src: url('./font/lato/Lato-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./font/lato/Lato-Light.woff2') format('woff2'), /* Modern Browsers */
+         url('./font/lato/Lato-Light.woff') format('woff'), /* Modern Browsers */
+         url('./font/lato/Lato-Light.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
