--- a/style/_base.scss
+++ b/style/_base.scss
@@ -15,6 +15,14 @@ html, body {
   overflow-x: hidden;
 }
 
+.deprecation {
+  background: #ffe6e6;
+  border: 2px solid #ff6b6b;
+  border-radius: 8px;
+  padding: 1.5em;
+  margin: 2em 0;
+}
+
 svg {
   width: 1rem;
 }
